--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>RoApps - Apps</title>
 <style>
 /* Add a black background color to the top navigation bar */
@@ -63,7 +64,7 @@
   <a href="https://thisunderratedcoder.github.io/apps.roblox.com">Home</a>
        <a class="active" href="#">Apps</a>
        <a href="#contact">Contact</a>
-        <input type="text" placeholder="Search..">
+        <input type="text" placeholder="Search.."><button type="submit"><i class="fa fa-search"></i></button>
 </div> 
 </body>
 </html>
