--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
   .topnav input[type=text] {
     border: 1px solid #ccc;
   }
+    .topnav a, .topnav input[type=text], .topnav .search-container button {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
 }
 </style>
 </head>
